src/visitor/snapshots/merkle_search_tree__visitor__dot__tests__dot_flat.snap
---
source: src/visitor/dot.rs
expression: v.into_inner().finalise()
---
digraph g {
	root [shape=diamond style=dotted];
	root -> page_1:head
	page_1 [shape=record, label="<head>Level 42|<10749111111111111111111111111111111>·|10749111111111111111111111111111111|<10750111111111111111111111111111111>·|10750111111111111111111111111111111"]

}

