src/visitor/snapshots/merkle_search_tree__visitor__dot__tests__dot_high_page_lt_pointer.snap
---
source: src/visitor/dot.rs
expression: v.into_inner().finalise()
---
digraph g {
	page_2:1081165011111111111111111111111111111 -> page_3:head;
	page_3 [shape=record, label="<head>Level 10|<1081164911111111111111111111111111111>·|1081164911111111111111111111111111111"]

	page_1:12295107491111111111111111111111111111 -> page_2:head;
	page_2 [shape=record, label="<head>Level 11|<1081165011111111111111111111111111111>·|1081165011111111111111111111111111111"]

	root [shape=diamond style=dotted];
	root -> page_1:head
	page_1 [shape=record, label="<head>Level 42|<12295107491111111111111111111111111111>·|12295107491111111111111111111111111111|<12295107501111111111111111111111111111>·|12295107501111111111111111111111111111|<high_page>·"]
	page_1:high_page -> page_4:head [fontcolor=red color=red label="high page"];

	page_4:1221229510450111111111111111111111111111 -> page_5:head;
	page_5 [shape=record, label="<head>Level 0|<1221229510449111111111111111111111111111>·|1221229510449111111111111111111111111111"]

	page_4 [shape=record, label="<head>Level 1|<1221229510450111111111111111111111111111>·|1221229510450111111111111111111111111111"]

}

